this better work

--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@ x++;
       <p>
         <a href=https://www.fultonpubliclibrary.org/>fulton county public library website</a>
       </p>
+ <p>
+        <a href=https://dekalblibrary.org/>DeKalb County Public Library website</a>
+      </p>
+      <p>
+        <a href=http://www.hallcountylibrary.org/>Fulton County Public Library website</a>
+      </p>
+      <p>
+        <a href=https://www.forsythpl.org/>Forsyth County Public Library website</a>
+      </p>
+      <p>
+        <a href=http://www.youseemore.com/walton/>Walton County Public Library website</a>
+      </p>
+      <p>
+        <a href=http://winder.prlib.org/>Winder Public Library website</a>
+      </p>
+      <p>
+        <a href=http://www.jcplfl.org/>Jackson County Public Library website</a>
+      </p>
+    </div>
+
     </div>
 
 <!-- THE END OF YOUR TABS FROM W3 SCHOOLS -->
