--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ x++;
 
     <div id="Me?" class="tabcontent" >
       <h3>What is the website for my local library?</h3>
-      <a href=https://www.gwinnettpl.org/>gwinnett county public library website</a>
+      <a href=https://www.gwinnettpl.org/>Gwinnett County Public Library website</a>
       <p>
-        <a href=http://afpls.org/>atlanta-fulton public library system website</a>
+        <a href=http://afpls.org/>Atlanta-Fulton Public Library system website</a>
       </p>
       <p>
-        <a href=https://www.fultonpubliclibrary.org/>fulton county public library website</a>
+        <a href=https://www.fultonpubliclibrary.org/>Fulton County Public Library website</a>
       </p>
  <p>
         <a href=https://dekalblibrary.org/>DeKalb County Public Library website</a>
